Compatibilidad con Paper 26.2